Images name correct

--- a/public/index.html
+++ b/public/index.html
@@ -187,23 +187,23 @@
         <div class="carousel-inner">
 
             <div class="carousel-item active">
-                <img src="images\Carousel/Pic.jpeg" style="width:100%; height:500px;" />
+                <img src="images\Carousel/pic1.jpeg" style="width:100%; height:500px;" />
             </div>
 
             <div class="carousel-item">
-                <img src="images\Carousel/Pic1.png" style="width:100%; height:500px;" />
+                <img src="images\Carousel/pic2.png" style="width:100%; height:500px;" />
             </div>
 
             <div class="carousel-item">
-                <img src="images\Carousel/Pic2.jpeg" style="width:100%; height:500px;" />
+                <img src="images\Carousel/pic3.jpeg" style="width:100%; height:500px;" />
             </div>
 
             <div class="carousel-item">
-                <img src="images\Carousel/Pic3.png" style="width:100%; height:500px;" />
+                <img src="images\Carousel/pic4.png" style="width:100%; height:500px;" />
             </div>
 
             <div class="carousel-item">
-                <img src="images\Carousel/Pic4.jpg" style="width:100%; height:500px;" />
+                <img src="images\Carousel/pic5.jpg" style="width:100%; height:500px;" />
             </div>
 
         </div>
@@ -386,7 +386,7 @@
         </div>
     </div>
 
-                                    <!-- ISSION AND UPCOMING PROJECTS -->
+                                    <!-- MISSION AND UPCOMING PROJECTS -->
 
     <div class="container">
         <div class="section-content">
@@ -482,7 +482,7 @@
             </div>
             <div class="col- shadow">
                 <div class="inner">
-                    <img src="images/Images Gallery/hazrat2.jpg." style="height:150px;" alt="hazrat2">
+                    <img src="images/Images Gallery/hazrat2.jpg" style="height:150px;" alt="hazrat2">
                 </div>
             </div>
             <div class="col- shadow">
